@@ -14,6 +14,7 @@ print "ok 3\n";
 my $c1 = async {
    print "ok 5\n";
    cede;
+   print "not ok 8\n";#d#
 };
 
 print $c1->ready ? "not " : "", "ok 4\n";
@@ -23,14 +24,14 @@ cede;
 print "ok 6\n";
 
 $c1->on_destroy (sub {
-   print "ok 8\n";
+   print "ok 7\n";
 });
 
 $c1->cancel;
 
-print "ok 7\n";
+print "ok 8\n";
 
-cede;
+cede; cede;
 
 print "ok 9\n";
 
